# deeproute

./: .gitignore  ARCHITECTURE.md  DEEPROUTE_SPEC.md  README.md  pyproject.toml
docs/: architecture.md  configuration.md  workflows.md
integration/: meta-prompt-recipe.md
skills/deeproute__help/: SKILL.md
skills/deeproute__nav/: SKILL.md
skills/deeproute__plan/: SKILL.md
skills/deeproute__update/: SKILL.md
src/deeproute/: __init__.py  __main__.py  ast_indexer.py  complexity.py  config.py  deepagent.py  embeddings.py  generator.py  git_utils.py  integrations.py  llm_client.py  models.py  orchestrator.py  scanner.py  schema.py  schema_reader.py  server.py  skills_installer.py  updater.py
test-harness/: Dockerfile  run.sh
test-harness/test-scripts/: setup-demo-repos.sh  test-claude-mcp.sh  test-deeproute.py
tests/: integration_test.py
