[project]
name = "deeproute"
version = "0.1.0"
description = "Multi-layer markdown routing MCP server for agentic code assistants"
readme = "README.md"
authors = [
    { name = "Chris Swanson", email = "chris.swanson@formedics.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "gitpython",
    "pydantic>=2",
    "anthropic[vertex]",
    "numpy>=2.4.4",
    "openai>=2.31.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
deeproute = "deeproute.server:main"
